--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ VITE_BASE_URL_PROD=https://api.vetmeblock.com/api
 # VITE_CONTRACT_ADDRESS = 0xe3ea34b7e279551a3fbd427a39084cdb671b7a24
 # VITE_CONTRACT_ADDRESS = 0x606fC11D37487731939f15138e942337c2D79e23
 # VITE_CONTRACT_ADDRESS = 0x6D5EE1Bc458747c4651d161bA872Fb5B83515483
-#AVAX
+#AVA
 VITE_CONTRACT_ADDRESS = 0x67dbDbD5bae2F9CeeF27DD2220CAF1AD22c1550d
 VITE_GOERLI_ADDRESS = 0x40d5E4520aCb3733D765e974316C777A1c5C270E
 
