--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.6",
     "web3": "^1.8.1",
+    "widgets10": "^0.0.3",
     "yup": "^1.0.2"
   },
   "devDependencies": {
