--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@moralisweb3/common-evm-utils": "^2.10.1",
     "@types/react-transition-group": "^4.4.5",
     "@types/styled-components": "^5.1.26",
+    "@vetme/widgets": "^1.0.4",
     "@walletconnect/ethereum-provider": "^2.1.4",
     "@web3-react/core": "latest",
     "@web3-react/injected-connector": "^6.0.7",
