--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.7.3",
     "@apollo/react-hooks": "^4.0.0",
     "@ethersproject/providers": "^5.7.2",
+    "@gelatonetwork/relay-sdk": "^4.0.0",
     "@kyberswap/widgets": "^1.0.0",
     "@moralisweb3/common-evm-utils": "^2.10.1",
     "@types/react-transition-group": "^4.4.5",
@@ -43,6 +44,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.4.5",
     "react-share": "^4.4.1",
     "react-toastify": "^9.1.1",
