--- a/.env
+++ b/.env
@@ -23,6 +23,9 @@ VITE_CONTRACT_ADDRESS_BSC_MAINNET = 0x54b681922d7696763197147546EbA21a13B3BEBE
 # POLYGON
 VITE_CONTRACT_POLYGON_MAINNET = 0x54b681922d7696763197147546EbA21a13B3BEBE
 
+# arbitrum
+VITE_CONTRACT_ADDRESS_ARBITRUM = 0xEfdDF5bf20e6EBB29465df81E0f9351D6D536072
+
  
 VITE_WETH_ADDRESS=0x1a237400185127d8b19d6ba7cad5d952a661dd56
 # VITE_CLIENT_URL=http://localhost:5173
