--- a/.env
+++ b/.env
@@ -26,6 +26,9 @@ VITE_CONTRACT_POLYGON_MAINNET = 0x54b681922d7696763197147546EbA21a13B3BEBE
 # arbitrum
 VITE_CONTRACT_ADDRESS_ARBITRUM = 0xEfdDF5bf20e6EBB29465df81E0f9351D6D536072
 
+
+VITE_GELATO_RELAY_API_KEY_MAINNET =i_vL197KZ3X14nbpJ9ZuJovUFZTDnEd8HfhmLH5bH9k_
+
  
 VITE_WETH_ADDRESS=0x1a237400185127d8b19d6ba7cad5d952a661dd56
 # VITE_CLIENT_URL=http://localhost:5173
