--- a/.env
+++ b/.env
@@ -26,6 +26,12 @@ VITE_CONTRACT_POLYGON_MAINNET = 0x54b681922d7696763197147546EbA21a13B3BEBE
 # arbitrum
 VITE_CONTRACT_ADDRESS_ARBITRUM = 0xEfdDF5bf20e6EBB29465df81E0f9351D6D536072
 
+# mantle
+VITE_CONTRACT_ADDRESS_MANTLE = ''
+
+# base
+VITE_CONTRACT_ADDRESS_BASE = 0xEfdDF5bf20e6EBB29465df81E0f9351D6D536072
+
 
 VITE_GELATO_RELAY_API_KEY_MAINNET =i_vL197KZ3X14nbpJ9ZuJovUFZTDnEd8HfhmLH5bH9k_
 
