--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ VITE_CONTRACT_POLYGON_MAINNET = 0x54b681922d7696763197147546EbA21a13B3BEBE
 VITE_CONTRACT_ADDRESS_ARBITRUM = 0xEfdDF5bf20e6EBB29465df81E0f9351D6D536072
 
 # mantle
-VITE_CONTRACT_ADDRESS_MANTLE = ''
+VITE_CONTRACT_ADDRESS_MANTLE = 0xEfdDF5bf20e6EBB29465df81E0f9351D6D536072
 
 # base
 VITE_CONTRACT_ADDRESS_BASE = 0xEfdDF5bf20e6EBB29465df81E0f9351D6D536072
