--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-VITE_BASE_URL=http://localhost:4000/api
+VITE_BASE_URL=https://api.vetmeblock.com/api
+# http://localhost:4000/api
 VITE_BASE_URL_PROD=https://api.vetmeblock.com/api
 # VITE_CONTRACT_ADDRESS=0x270d7dE628A78Ca058b2fE0Aa0EBe1756D6cA5f1
 # VITE_CONTRACT_ADDRESS=0x57FD24f67AAB87dF532807066d4879E9B9C5766e
@@ -33,7 +34,7 @@ VITE_CONTRACT_ADDRESS_MANTLE = 0xFe55E0AfdAAF9070CF477d9f00373827EDD387e8
 VITE_CONTRACT_ADDRESS_BASE = 0xEfdDF5bf20e6EBB29465df81E0f9351D6D536072
 
 
-VITE_GELATO_RELAY_API_KEY_MAINNET =i_vL197KZ3X14nbpJ9ZuJovUFZTDnEd8HfhmLH5bH9k_
+VITE_GELATO_RELAY_API_KEY_MAINNET = i_vL197KZ3X14nbpJ9ZuJovUFZTDnEd8HfhmLH5bH9k_
 
  
 VITE_WETH_ADDRESS=0x1a237400185127d8b19d6ba7cad5d952a661dd56
