--- a/.env
+++ b/.env
@@ -1,12 +1,7 @@
-VITE_BASE_URL=https://api.vetmeblock.com/api
+VITE_BASE_URL= https://api.vetmeblock.com/api
 # http://localhost:4000/api
 VITE_BASE_URL_PROD=https://api.vetmeblock.com/api
-# VITE_CONTRACT_ADDRESS=0x270d7dE628A78Ca058b2fE0Aa0EBe1756D6cA5f1
-# VITE_CONTRACT_ADDRESS=0x57FD24f67AAB87dF532807066d4879E9B9C5766e
-# VITE_CONTRACT_ADDRESS = 0xe3ea34b7e279551a3fbd427a39084cdb671b7a24
-# VITE_CONTRACT_ADDRESS = 0x606fC11D37487731939f15138e942337c2D79e23
-# VITE_CONTRACT_ADDRESS = 0x6D5EE1Bc458747c4651d161bA872Fb5B83515483
-#AVA
+
 VITE_CONTRACT_ADDRESS = 0x67dbDbD5bae2F9CeeF27DD2220CAF1AD22c1550d
 VITE_GOERLI_ADDRESS = 0x40d5E4520aCb3733D765e974316C777A1c5C270E
 
@@ -32,6 +27,12 @@ VITE_CONTRACT_ADDRESS_MANTLE = 0xFe55E0AfdAAF9070CF477d9f00373827EDD387e8
 
 # base
 VITE_CONTRACT_ADDRESS_BASE = 0xEfdDF5bf20e6EBB29465df81E0f9351D6D536072
+
+# Gobi Testnet
+VITE_CONTRACT_ADDRESS_GOBI = 0xFe55E0AfdAAF9070CF477d9f00373827EDD387e8
+# Horizen EON 
+VITE_CONTRACT_ADDRESS_EON = 0xEfdDF5bf20e6EBB29465df81E0f9351D6D536072
+
 
 
 VITE_GELATO_RELAY_API_KEY_MAINNET = i_vL197KZ3X14nbpJ9ZuJovUFZTDnEd8HfhmLH5bH9k_
