--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_BASE_URL= https://api.vetmeblock.com/api
+VITE_BASE_URL= http://localhost:4000/api
 # http://localhost:4000/api
 VITE_BASE_URL_PROD=https://api.vetmeblock.com/api
 
@@ -28,6 +28,9 @@ VITE_CONTRACT_ADDRESS_MANTLE = 0xFe55E0AfdAAF9070CF477d9f00373827EDD387e8
 
 # base
 VITE_CONTRACT_ADDRESS_BASE = 0xEfdDF5bf20e6EBB29465df81E0f9351D6D536072
+
+# blast
+VITE_CONTRACT_ADDRESS_BLAST = 0x6d2A2615e234634ad56d2Dc660C9757D020842Ae
 
 # Gobi Testnet
 VITE_CONTRACT_ADDRESS_GOBI = 0xFe55E0AfdAAF9070CF477d9f00373827EDD387e8
