--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ethersproject/providers": "^5.7.2",
     "@gelatonetwork/relay-sdk": "^4.0.0",
     "@kyberswap/widgets": "^1.0.0",
+    "@lottiefiles/react-lottie-player": "^3.5.3",
     "@moralisweb3/common-evm-utils": "^2.10.1",
     "@types/react-transition-group": "^4.4.5",
     "@types/styled-components": "^5.1.26",
