Details page design

--- a/.env
+++ b/.env
@@ -10,6 +10,11 @@ VITE_CONTRACT_ADDRESS_FUJI = 0x67dbDbD5bae2F9CeeF27DD2220CAF1AD22c1550d
 VITE_CONTRACT_ADDRESS_GOEILY_TESTNET = 0x956663BE8EeBCd23bf9c091B41719597BAb6f550
 
 
+
+# SEPOLIA TESTNET 
+
+ VITE_CONTRACT_ADDRESS_SEPOLIA =  0xdded1Bf89D055964390bce72CDeb7715e718EaE4
+
 # ETHERIUM MAINNET
 VITE_CONTRACT_ADDRESS_ETH_MAINNET = 0xB59caA38F2AA082523361c2c09C9E540a3734706
 # 0x2e6013DA3CbE83781A03Aa2cFEeEb0179f610C3F
