--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
-VITE_BASE_URL= http://localhost:4000/api
 # http://localhost:4000/api
+VITE_BASE_URL= http://localhost:4000/api
 VITE_BASE_URL_PROD=https://api.vetmeblock.com/api
+
+VITE_V1_BASE_URL= http://localhost:4000/api/v1
+VITE_V1_BASE_URL_PROD=https://api.vetmeblock.com/api/v1
 
 VITE_CONTRACT_ADDRESS = 0x67dbDbD5bae2F9CeeF27DD2220CAF1AD22c1550d
 VITE_GOERLI_ADDRESS = 0x40d5E4520aCb3733D765e974316C777A1c5C270E
