--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.4.5",
     "react-share": "^4.4.1",
+    "react-smooth-range-input": "^0.3.1",
     "react-toastify": "^9.1.1",
     "react-topbar-progress-indicator": "^4.1.1",
     "react-transition-group": "^4.4.5",
